estudos html5 css

--- a/pag002.html
+++ b/pag002.html
@@ -4,36 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-  
-    <link rel="stylesheet" href="style.css">
-    <style>
-    body{
-        background-image: url(imagens/celulares/Abstract-Elements-Transparent-Image\ \(1\)\ -\ Copia.png);
-    }
-
-
-        div.quadrado {
-        display: inline-block;
-        border: 1px solid black;
-        border-radius: 10px;
-        background-color: lightgray;
-        width: 300px;
-        height: 300px;
-
-        }
-        div#q1{background-color: aqua;}
-        div#q2{background-image: linear-gradient(to bottom,yellow,red );}
-        div#q3{background-image: url(imagens/celulares/iphone-x.jpg);}
-
-    </style>
+    <title>segunda pagina </title>
 </head>
-<body> 
-    <div class="quadrado" id="q1"> 
-    </div>
-    <div class="quadrado" id="q2"> 
-    </div>
-    <div class="quadrado" id="q3"> 
-    </div>
+<body>
+    <h1>esta e a segunda pagina do meu site</h1>
+    <h2>a segunda pagina esta aqui </h2>
+    <h2>esta pagina é um oferecimento de <a href="https://www.hostnet.com" target="_blank" rel="previous">Hostnet</a></h2>
+    <p><a href="index.html" rel="pevious">voltar para primeira pagina</a></p>
 </body>
 </html>
